add new service languange identifier